--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "ext-iconv": "*",
         "allocine/twigcs": "^3.1",
         "cocur/slugify": "^3.2",
+        "fzaninotto/faker": "^1.8",
+        "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
