--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,3 +31,7 @@ services:
         tags: ['controller.service_arguments']
         arguments:
             $twig: '@twig'
+
+    App\Listener\ImageCacheSubscriber:
+        tags:
+        - { name: doctrine.event_subscriber }
