--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=ea07e17adb26dd4842857b514e015102
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root123:root123@127.0.0.1:3306/db_agence
+DATABASE_URL=mysql://root123:root123@127.0.0.1:3306/db_immo
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
