--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,6 +3,6 @@ vich_uploader:
 
     mappings:
        property_image:
-           uri_prefix: /images/properties
-           upload_destination: '%kernel.project_dir%/public/images/properties'
+           uri_prefix: /media/properties
+           upload_destination: '%kernel.project_dir%/public/media/properties'
            namer: Vich\UploaderBundle\Naming\UniqidNamer
