--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://root123:root123@127.0.0.1:3306/db_immo
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://localhost:1025
 ###< symfony/swiftmailer-bundle ###
