--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "jquery": "^3.4.1",
+        "select2": "^4.0.10"
     }
 }
