--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@babel/core": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
         "jquery": "^3.4.1",
+        "leaflet": "^1.5.1",
+        "places.js": "^1.16.4",
         "select2": "^4.0.10"
     }
 }
