feature: map ok

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "jquery": "^3.4.1",
         "leaflet": "^1.5.1",
         "places.js": "^1.16.4",
-        "select2": "^4.0.10"
+        "select2": "^4.0.10",
+        "slick-carousel": "^1.8.1"
     }
 }
