--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "allocine/twigcs": "^3.1",
+        "beberlei/doctrineextensions": "^1.2",
         "cocur/slugify": "^3.2",
         "fzaninotto/faker": "^1.8",
         "knplabs/knp-paginator-bundle": "^4.0",
