--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@babel/core": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
+        "flickity": "^2.2.1",
         "jquery": "^3.4.1",
         "leaflet": "^1.5.1",
         "places.js": "^1.16.4",
