--- a/.env
+++ b/.env
@@ -31,5 +31,9 @@ DATABASE_URL=mysql://root123:root123@127.0.0.1:3306/db_immo
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://localhost:1025
+MAILER_URL=smtp://localhost:1030
 ###< symfony/swiftmailer-bundle ###
+
+
+GOOGLE_RECAPTCHA_KEY=6LdHf7gUAAAAAHO-HpwjThz15Xn-pp4dSmiHVh2c
+GOOGLE_RECAPTCHA_SECRET=6LdHf7gUAAAAAKchGxhemQoLh-HHF-xAhUxXiL3U
