--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "beberlei/doctrineextensions": "^1.2",
         "cocur/slugify": "^3.2",
         "fzaninotto/faker": "^1.8",
+        "google/recaptcha": "^1.2",
         "knplabs/knp-paginator-bundle": "^4.0",
         "liip/imagine-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
+        "swiftmailer/swiftmailer": "^6.0",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
@@ -53,7 +55,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Alex\\RecaptchaBundle\\": "lib/RecaptchaBundle"
         }
     },
     "autoload-dev": {
